Adicionando link de navegação e Adicionando Spring Security

--- a/CESTA/src/main/webapp/resources/fragmentos/rodape.xhtml
+++ b/CESTA/src/main/webapp/resources/fragmentos/rodape.xhtml
@@ -1,18 +1,23 @@
 <ui:fragment xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns="http://www.w3.org/1999/xhtml">
-            <div class="container" style="padding: 50px 0">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <ul class="list-inline">
-                            <div class="control-group pull-right"
-                                style="margin-top: -15px">
-                                <img
-                                    alt="Secretaria de Planejamento, Orçamento e Gestão"
-                                    class="img-responsive"
-                                    src="resources/images/SEPLAG.png" width="405" />
-                            </div>
-                        </ul>
+    <div class="container" style="padding: 50px 0">
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="list-inline">
+                    <div class="control-group pull-right"
+                        style="margin-top: -15px">
+                        <img
+                            alt="Secretaria de Planejamento, Orçamento e Gestão"
+                            class="img-responsive"
+                            src="resources/images/SEPLAG.png" width="405" />
                     </div>
-                </div>
+                </ul>
             </div>
+        </div>
+    </div>
+
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.4.min.js"
+                />
+    <script
+        src="http://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.js" />
            
 </ui:fragment>
